working devcontainer setup

--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -3,8 +3,8 @@ seaborn
 scikit-learn
 pandas
 mlflow
-gdown
-great_expectations
+# gdown
+# great_expectations
 # deployment
-fastapi
-uvicorn
+# fastapi
+# uvicorn
