--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ coverage.xml
 *.mo
 *.pot
 
+models/
+
 # Django stuff:
 *.log
 local_settings.py
@@ -127,3 +129,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+results/
