--- a/.devcontainer/Dockerfile.jupyter
+++ b/.devcontainer/Dockerfile.jupyter
@@ -2,14 +2,19 @@ FROM jupyter/minimal-notebook
 
 WORKDIR /app
 
-COPY ../requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
+COPY setup_prefect.sh /app/setup_prefect.sh
 
 USER root
 RUN apt update && apt install build-essential -y
+RUN chmod +x /app/setup_prefect.sh
+
 USER jovyan
 
 RUN pip install -r requirements.txt
 
 ENV PYTHONPATH="$PYTHONPATH:/app/lib"
+
+RUN ./setup_prefect.sh
 
 CMD ["jupyter", "lab", "--ip=0.0.0.0", "--allow-root", "--NotebookApp.token='MLOPS'"]
