Normalize line endings to LF

--- a/.devcontainer/Dockerfile.jupyter
+++ b/.devcontainer/Dockerfile.jupyter
@@ -7,14 +7,12 @@ COPY setup_prefect.sh /app/setup_prefect.sh
 
 USER root
 RUN apt update && apt install build-essential -y
+RUN chown -R jovyan:users /app
 RUN chmod +x /app/setup_prefect.sh
 
 USER jovyan
-
 RUN pip install -r requirements.txt
-
 ENV PYTHONPATH="$PYTHONPATH:/app/lib"
-
-RUN ./setup_prefect.sh
+RUN /app/setup_prefect.sh
 
 CMD ["jupyter", "lab", "--ip=0.0.0.0", "--allow-root", "--NotebookApp.token='MLOPS'"]
