--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,6 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-src/data
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -132,3 +131,5 @@ dmypy.json
 
 
 results/
+data/
+src/data
