--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
                 "python.pythonPath": "/opt/conda/bin/python",
                 "python.linting.pylintEnabled": false,
                 "python.linting.enabled": true,
-                "jupyter.notebookFileRoot": "/app/src",
+                "jupyter.notebookFileRoot": "/app/lab",
                 "jupyter.allowLocalServer": true
             },
             "extensions": [
