--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,13 +1,18 @@
 version: "3.9"
 name: "5mlde-v1"
 services:
+  api:
+    build: api
+    ports:
+      - 8086:8086
+    volumes:
+      - models:/mlflow
   training:
       build: training
       ports:
         - "4200:4200"
       volumes:
-        - models:/mlflow
-      
+        - models:/mlflow      
   mlflow:
       build: mlflow
       ports:
