--- a/src/training/Dockerfile
+++ b/src/training/Dockerfile
@@ -11,7 +11,7 @@ COPY . .
 RUN prefect config set PREFECT_API_URL=http://host.docker.internal:4200/api
 ENV MLFLOW_TRACKING_URI=http://mlflow:5000
 
-CMD ["sh","-c","prefect orion start --host 0.0.0.0 & \
+CMD ["sh","-c","prefect server start --host 0.0.0.0 & \
     sleep 25 && \
     python deployement.py & \
     sleep 15 && \
