--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,11 @@
 				"ms-toolsai.jupyter",
 				"ms-python.vscode-pylance",
 				"PKief.material-icon-theme",
-				"GitHub.codespaces"
+				"GitHub.codespaces",
+				"ms-toolsai.jupyter-renderers",
+				"ms-toolsai.vscode-jupyter-cell-tags",
+				"ms-toolsai.jupyter-keymap",
+				"ms-toolsai.vscode-jupyter-slideshow"
 			]
         }
     },
