--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -40,5 +40,26 @@ services:
       - ./performance:/mnt/locust
     command: -f /mnt/locust/locustfile.py --worker --master-host master
 
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - 9090:9090
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+
+  grafana:
+    image: grafana/grafana:latest
+    user: "472"
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - ./monitoring/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - ./monitoring/dashboard.json:/etc/grafana/provisioning/dashboards/dashboard.json
+      - ./monitoring/dashboard.yml:/etc/grafana/provisioning/dashboards/default.yml
+
 volumes:
   5mlde:
